syntax = "proto3";

package greetManyTimes;

option go_package = "github.com/SarathLUN/udemy-grpc-go-course;greetManyTimesPb";

message Greeting{
    string first_name=1;
    string last_name=2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result=1;
}

message GreetManyTimesRequest{
    Greeting greeting = 1;
}

message GreetManyTimesResponse{
    string result=1;
}

service GreetService{
    rpc DoGreet(GreetRequest) returns (GreetResponse);

    // server streaming
    rpc DoGreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse);
}

